# forde-vision-language

./: .gitignore  Dockerfile  README.md  TODO.md  analysis.ipynb  benchmark.py  benchmark_output_optimized.txt  main.py  pyproject.toml  reproduce_grad_sink.py  verify_hoyer.py
.jules/: bolt.md
runs/forde_llm_experiment/: events.out.tfevents.1767746360.nixos-laptop.5064.0  events.out.tfevents.1767746411.nixos-laptop.5260.0  events.out.tfevents.1767746493.nixos-laptop.5501.0  events.out.tfevents.1767746608.nixos-laptop.5743.0  events.out.tfevents.1767746715.nixos-laptop.5971.0
scripts/: benchmark_sensing.py  entrypoint.sh  run_training.sh  run_verification.sh
src/data/: dataset.py  download_to_drive.py
src/forde/: actuation.py  clustering.py  hyper_connections.py  model.py  moe.py  moe_slow_loop.py  sensing.py  smoothing.py  sparse_attention.py
src/training/: train.py
src/utils/: logging.py
tests/: reproduce_grad_sink.py  test_moe.py  test_moe_slow_loop.py  test_sensing_correctness.py  test_smoothing_correctness.py  test_topk_correctness.py  test_topk_usage.py  verify_hoyer.py  verify_init.py  verify_moe.py  verify_reset.py  verify_security_fix.py  verify_top_k_optimization.py
