[project]
name = "functional-organisation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "flax>=0.12.0",
    "jax>=0.8.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "tensorboard>=2.15.0",
    "ipykernel>=6.29.0",
    "pytest>=8.0.0",
]
